fix: change .lastUpdated display property to block for better alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -566,8 +566,7 @@ text {
 }
 
 .lastUpdated {
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
   margin-right: 3px;
   font-size: 0.9rem;
 }
